feat: add administrator 2FA and IP allowlists
